CS 536/pr5/tests/errors/CallFunction_WrongNumArgs.minc

void ASweetFunction(int Arg1, int Arg2, int Arg3)
{
	// Do some stuff with the args...
	int SUM = Arg1 + Arg2 + Arg3;
}

// Create a function with no arguments and call it with args
void AnotherFunction()
{
	int ANumber = 1234;
}

void main()
{
	// Call it with the correct number of args
	ASweetFunction(1, 2, 3);

	// Call it with too few arguments
	ASweetFunction(1, 2);

	// Call it with too many arguments
	ASweetFunction(1,2,3,4);

	// Call it with no arguments
	ASweetFunction();

	// Call it with the correct number of args
	AnotherFunction();
	AnotherFunction(true);
	AnotherFunction(1,2,3,4,5,6,7,8);
}
